<resources>
    <string name="app_name">SOCIEDAD</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="admin">ADMIN</string>
    <string name="member">MEMBER</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">Don\'t have an account ?</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">First Name Middle Name Last Name</string>
    <string name="contact_no">Mobile Number</string>
    <string name="email">Email ID</string>
    <string name="permanent_add">Permanent Address</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="title_AdminPersonalDetails">Admin\'s Personal Details</string>
    <string name="title_AdminSocietyDetails">Society\'s Details</string>

</resources>
